--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "veed",
+  "name": "github-trending-repos",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^1.7.4",
+    "@emotion/react": "11",
+    "@emotion/styled": "11",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -10,9 +13,23 @@
     "@types/node": "^16.11.21",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "date-fns": "^2.28.0",
+    "eslint": "^8.7.0",
+    "eslint-config-airbnb": "18.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "framer-motion": "5",
+    "prettier": "^2.5.1",
+    "prettier-airbnb-config": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-query": "^3.34.12",
     "react-scripts": "5.0.0",
+    "sass": "^1.49.0",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
@@ -20,13 +37,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "lint": "eslint --ext js,jsx,ts,tsx src",
+    "prettify": "prettier \"src/**/*.{ts,tsx}\" --config .prettierrc.js --write",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -39,5 +52,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/parser": "^5.10.1",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-jest": "^26.0.0"
   }
 }
