--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -103,6 +103,7 @@
     "import/prefer-default-export": "off",
     "react/react-in-jsx-scope": "off",
     "no-unused-vars": ["off"],
+    "no-nested-ternary": "off",
     "@typescript-eslint/no-unused-vars": [
       "warn",
       { "ignoreRestSiblings": true }
